upgrade ignite to 2.8.0
Signed-off-by: Lukas Prettenthaler <rdx@wsn.at>